force-app/main/default/objects/Teacher__c/fields/Count_reviews__c.field-meta.xml
<CustomField>
    <fullName>Count_reviews__c</fullName>
    <label>Count reviews</label>
    <summaryForeignKey>Review__c.Teacher__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>