force-app/main/default/objects/Teacher__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Base school</fullName>
            </value>
            <value>
                <fullName>High school</fullName>
            </value>
            <value>
                <fullName>Junior Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor</fullName>
            </value>
            <value>
                <fullName>Magister</fullName>
            </value>
            <value>
                <fullName>Doctor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>