force-app/main/default/objects/Teacher__c/fields/Hired_date__c.field-meta.xml
<CustomField>
    <fullName>Hired_date__c</fullName>
    <label>Hired date</label>
    <type>Date</type>
</CustomField>