force-app/main/default/objects/Teacher__c/fields/Years_of_expirience__c.field-meta.xml
<CustomField>
    <fullName>Years_of_expirience__c</fullName>
    <formula>YEAR(TODAY()) - YEAR(Hired_date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years of expirience</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>