force-app/main/default/objects/Teacher__c/listViews/All_Teachers.listView-meta.xml
<ListView>
    <fullName>All_Teachers</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Birthday__c</columns>
    <columns>Department__c</columns>
    <columns>Phone__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <columns>Years_of_expirience__c</columns>
    <columns>Count_reviews__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Teachers</label>
</ListView>